--- a/_config.yml
+++ b/_config.yml
@@ -78,15 +78,21 @@ tech_list: # 형식에 맞추어 항목 추가
 - name: GA
   color: color-3
   animation: fadeInLeft
-  percent: 30
-  mark: 30
+  percent: 40
+  mark: 40
   content: 강의를 통해 Google Analytics 활용 방법을 숙지하며 GAIQ 자격을 취득했습니다. 데모 계정을 통해 개인 프로젝트를 진행한 경험이 있습니다.
-- name: Github
+- name: Tableau
   color: color-4
   animation: fadeInRight
-  percent: 30
-  mark: 30
-  content: 프로젝트 진행 시 github를 통해 소스 코드를 관리하였으며, 협업 역시 github을 통해 진행하였습니다. 또한 github서버를 활용하여 블로그 및 포트폴리오 사이트를 관리합니다.
+  percent: 50
+  mark: 50
+  content: 인프런의 boostcamp 강의를 통해 태블로의 기초,중급,고급 기능에 대해 학습했습니다.
+#- name: Github
+#  color: color-5
+#  animation: fadeInLeft
+#  percent: 60
+#  mark: 60
+#  content: 프로젝트 진행 시 github를 통해 소스 코드를 관리하였으며, 협업 역시 github을 통해 진행하였습니다. 또한 github서버를 활용하여 블로그 및 포트폴리오 사이트를 관리합니다.
 tech_desc: 
 
 
@@ -100,10 +106,16 @@ project_load_more_url: #
 project_team_name: 팀프로젝트
 project_team: # 형식에 맞추어 항목 추가
 - background_url: images/delivery.png
-  animation: fadeInRight
+  animation: fadeInLeft
   name: 데이터 안심구역 공모전(2021.09 ~ 2021.11)
   description: 데이터 분석을 통해, 배달관련사고 방지를 위한 서울특별시의 특별 단속구역을 선정하는 프로젝트를 진행했습니다.
   detail_url: https://kyusanghwang0912.github.io/project/2022-02-28-seoul_delivery/
+
+- background_url: images/naga.png
+  animation: fadeInRight
+  name: K-digital 융복합 프로젝트(2021.09 ~ 2021.11)
+  description: Bigdata, AI, IoT, Cloud 분야가 협력하여 개발한 무인점포 AI CCTV 제품을 기획하는 프로젝트를 진행했습니다.
+  detail_url: https://kyusanghwang0912.github.io/project/2022-02-27-naga/
 
 project_my_name: 개인프로젝트
 project_my: # 형식에 맞추어 항목 추가
@@ -118,7 +130,7 @@ project_my: # 형식에 맞추어 항목 추가
 # Experience
 exp_meta: What have I achieved?
 exp_header: 저는 이런 "경험"들을 해봤습니다.
-exp_content: 데이터 분석가에게 큰 도움은 되지 않을 수 있지만, 회사에서 필요로 한다면 이런 역량도 가지고 있습니다.
+exp_content: 이런 역량도 가지고 있습니다.
 exp_services: # 형식에 맞추어 항목 추가
 - name: 광고기획
   color: color-1
@@ -126,17 +138,17 @@ exp_services: # 형식에 맞추어 항목 추가
   content: kobaco의 1인 광고 창작자 양성과정을 통해 광고기획 및 제작을 경험하며 마케터로서의 역량을 키웠습니다. 
 - name: 개발
   color: color-2
-  icon: icon-home
-  content: Django를 활용한 웹사이트 개발 프로젝트 및 융복합 개발 프로젝트에 참여하여 개발 역량을 키웠습니다.
-- name : 프로젝트
-  color: color-3
   icon: icon-phone3
-  content: 다양한 프로젝트를 기획, 진행 해왔기에 업무에 대한 협력과 배분이 익숙합니다. 새로운 프로젝트에 도전적입니다.
+  content: Django를 활용한 웹사이트 개발 프로젝트 및 융복합 개발 프로젝트에 참여하여 개발 역량을 키웠습니다.
+- name : 협업(Git)
+  color: color-3
+  icon: icon-home
+  content: 프로젝트 진행 시 github를 통해 소스 코드를 관리하였으며, 협업 역시 github을 통해 진행하였습니다.
 
 exp_counters:
 - name: project
-  count: 2
-  speed: 5000
+  count: 3
+  speed: 10000
 
 
 # extracurricular activies
@@ -145,17 +157,22 @@ career_header: Work Career
 career_list:
 - name: kdigital 융복합 프로젝트형 빅데이터 분석 서비스 개발
   date: 2021.06~2021.12
-  content: Python Django 웹사이트 개발 프로젝트  <br> Python&R 데이터 분석 알고리즘 학습 및 실습 <br> Bigdata+AI+IoT+Cloud 융복합 개발 프로젝트
+  content: 빅데이터 분석, 개발에 필요한 교육 받으며 개인/팀 프로젝트 진행  <br> - 구글Analytics 데모 계정 분석(개인 프로젝트) <br> - 팀 구성 후 데이터 안심구역 경진대회 참여  <br> - 웹페이지 개발(팀 프로젝트) <br> - 융/복합 프로젝트(빅데이터 분석 담당) <br> - Python, R, SQL, Django, Git
   color: color-1
   icon: icon-pen2
   animation: fadeInLeft
-- name: KOBACO 1인 광고 콘텐츠 창작자 양성과정
-  date: 2020.05~2020.09
-  content: KOBACO에서 주관하는 교육에서 광고기획 및 제작 프로젝트
+- name: 코멘토 sql 부트캠프
+  date: 2022.01~2022.02
+  content: SQL 문법 교육 및 활용 실습까지 진행하며, 각 주 과제 수행 후 피드백 진행 <br> - Redash의 실습 database의 다양한 실습 문제 해결하는 SQL 쿼리 작성 <br> - SQL 활용한 기업의 데이터 분석 보고서 작성 <br> - SQL 활용한 기업의 대시보드 개발
   color: color-2
   icon: icon-pen2
   animation: fadeInRight
-
+- name: KOBACO 1인 광고 콘텐츠 창작자 양성과정
+  date: 2020.05~2020.09
+  content: 광고 기획, 촬영, 편집에 대한 기초 학습 및 팀 프로젝트 진행 <br> - 광고홍보학과, 영화과로 구성된 프로젝트 팀 내 유일한 공과대학 학생으로서 광고 기획에 필요한 데이터 수집 및 분석 과정 담당
+  color: color-3
+  icon: icon-pen2
+  animation: fadeInLeft
 
 # Education
 edu_meta: Education
