--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,9 @@ slider_1: # 형식에 맞추어 항목 추가
 # About
 about_meta: About Me
 about_header: >- 
-  "데이터 활용 마케터"
+  "데이터 활용 마케터 & 그로스 데이터 분석가"
 about_introduce: >-
-  "안녕하세요. 데이터 활용한 마케팅을 하고자 하는 황규상입니다."
+  "안녕하세요. 데이터 마케팅 & 그로스 데이터 분석의 전문가가 되고자 하는 황규상입니다."
 about_content: >-
   아래와 같은 자격을 갖추고 있습니다.
 about_services: # 형식에 맞추어 항목 추가
@@ -63,30 +63,30 @@ tech_meta: TECH SKILLS
 tech_header: 저는 현재 이것을 할 수 있습니다.
 tech_content: 앞으로 계속 배워나갈 예정입니다.
 tech_list: # 형식에 맞추어 항목 추가
-- name: Python
+- name: SQL
   color: color-1
   animation: fadeInLeft
-  percent: 70
-  mark: 70
-  content: 파이썬을 통한 데이터 전처리부터 데이터 분석 및 시각화가 가능합니다. (머신러닝 & 통계분석)
-- name: SQL
+  percent: 80
+  mark: 80
+  content: SQL의 문법들을 공부하며 문제를 풀고 리뷰했습니다. Redash 사이트를 활용하여 가상 회사 데이터 분석 보고서 및 대시보드를 작성한 경험이 있습니다.
+- name: Python
   color: color-2
   animation: fadeInRight
-  percent: 60
-  mark: 60
-  content: SQL의 기본적인 문법들을 공부하며, sqld 자격증을 취득했습니다. redash 사이트를 활용하여 가상 회사 데이터 분석 프로젝트를 진행한 경험이 있습니다.
+  percent: 80
+  mark: 80
+  content: Python을 활용한 데이터 수집/전처리/분석/시각화가 가능합니다. 다양한 데이터 분석 프로젝트를 Python을 활용하여 진행한 경험이 있습니다.(머신러닝 & 통계분석)
 - name: GA
   color: color-3
   animation: fadeInLeft
-  percent: 40
-  mark: 40
-  content: 강의를 통해 Google Analytics 활용 방법을 숙지하며 GAIQ 자격을 취득했습니다. 데모 계정을 통해 개인 프로젝트를 진행한 경험이 있습니다.
+  percent: 50
+  mark: 50
+  content: 강의를 통해 Google Analytics 다양한 지표를 학습 및 활용 방법을 익혔습니다. 데모 계정을 통해 개인 프로젝트를 진행한 경험이 있습니다.
 - name: Tableau
   color: color-4
   animation: fadeInRight
-  percent: 50
-  mark: 50
-  content: 인프런의 boostcamp 강의를 통해 태블로의 기초,중급,고급 기능에 대해 학습했습니다.
+  percent: 60
+  mark: 60
+  content: edwith의 boostcamp 강의를 통해 태블로의 기초,중급,고급 기능에 대해 학습했습니다.
 #- name: Github
 #  color: color-5
 #  animation: fadeInLeft
@@ -161,18 +161,24 @@ career_list:
   color: color-1
   icon: icon-pen2
   animation: fadeInLeft
-- name: 코멘토 sql 부트캠프
+- name: 코멘토 SQL 직무부트캠프
   date: 2022.01~2022.02
   content: SQL 문법 교육 및 활용 실습까지 진행하며, 각 주 과제 수행 후 피드백 진행 <br> - Redash의 실습 database의 다양한 실습 문제 해결하는 SQL 쿼리 작성 <br> - SQL 활용한 기업의 데이터 분석 보고서 작성 <br> - SQL 활용한 기업의 대시보드 개발
   color: color-2
   icon: icon-pen2
   animation: fadeInRight
+- name: edwith 부스트코스 - 데이터 시각화를 위한 태블로
+  date: 2022.01~2022.03
+  content: 태블로의 기초,중급,고급 기능을 활용하여 데이터 시각화 과정 실습 <br> - 태블로 기초 = 차트, 테이블, 축, 맵, 그룹/집합 등을 활용한 시각화 <br> - 태블로 중급 = 대시보드, 스토리 기능, 퀵 테이블 활용, 매개변수 생성 <br> - 태블로 고급 = 대시보드 액션 적용, 분야별 효율적인 대시보드 작성
+  color: color-3
+  icon: icon-pen2
+  animation: fadeInLeft 
 - name: KOBACO 1인 광고 콘텐츠 창작자 양성과정
   date: 2020.05~2020.09
   content: 광고 기획, 촬영, 편집에 대한 기초 학습 및 팀 프로젝트 진행 <br> - 광고홍보학과, 영화과로 구성된 프로젝트 팀 내 유일한 공과대학 학생으로서 광고 기획에 필요한 데이터 수집 및 분석 과정 담당
-  color: color-3
+  color: color-4
   icon: icon-pen2
-  animation: fadeInLeft
+  animation: fadeInRight
 
 # Education
 edu_meta: Education
