--- a/_config.yml
+++ b/_config.yml
@@ -126,6 +126,14 @@ project_my: # 형식에 맞추어 항목 추가
   detail_url: https://kyusanghwang0912.github.io/project/2022-03-01-sql_comento/
   readmore_url: #
 
+- background_url: images/git_adp.png
+  animation: fadeInRight
+  name: Pyhton 코딩 북 프로젝트(2021.09 ~ 2021.03)
+  description: ADP 자격증 준비를 위해 그룹 스터디를 진행하며 Python을 활용한 전처리/통계분석/머신러닝을 학습 및 실습하고 정리하여, 책으로 제작했습니다.
+  detail_url: https://github.com/kyusangHwang0912/TIL/tree/master/ADP
+  readmore_url: #
+
+
 
 # Experience
 exp_meta: What have I achieved?
@@ -146,9 +154,9 @@ exp_services: # 형식에 맞추어 항목 추가
   content: 프로젝트 진행 시 github를 통해 소스 코드를 관리하였으며, 협업 역시 github을 통해 진행하였습니다.
 
 exp_counters:
-- name: project
-  count: 3
-  speed: 10000
+- name: Activities
+  count: 4
+  speed: 500
 
 
 # extracurricular activies
