--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kyu's Portfoilo
 name: 황규상
 email: hkyku9@naver.com
 description: >-
-  Data Analist & Digital Marketer
+  Data Analist
 
 
 baseurl: ""
@@ -44,24 +44,25 @@ slider_1: # 형식에 맞추어 항목 추가
 # About
 about_meta: About Me
 about_header: >- 
-  "데이터 활용 마케터 & 그로스 데이터 분석가"
+  "데이터 분석가"
 about_introduce: >-
-  "안녕하세요. 데이터 마케팅 & 그로스 데이터 분석의 전문가가 되고자 하는 황규상입니다."
+  "안녕하세요. 데이터 분석 마케팅 & 그로스 데이터 분석의 전문가가 되고자 하는 황규상입니다."
 about_content: >-
   아래와 같은 자격을 갖추고 있습니다.
 about_services: # 형식에 맞추어 항목 추가
 - icon: icon-data
   name: SQL개발자(SQLD)
-- icon: icon-monitor
-  name: 구글애널리틱스 자격(GAIQ)
 - icon: icon-code
   name: 데이터분석준전문가(ADSP)
+- icon: icon-monitor
+  name: 구글애널리틱스 자격(GAIQ)
+
 
 
 # Tech  skill
 tech_meta: TECH SKILLS
 tech_header: 저는 현재 이것을 할 수 있습니다.
-tech_content: 앞으로 계속 배워나갈 예정입니다.
+tech_content: 앞으로 계속 성장하겠습니다.
 tech_list: # 형식에 맞추어 항목 추가
 - name: SQL
   color: color-1
@@ -138,7 +139,7 @@ project_my: # 형식에 맞추어 항목 추가
 # Experience
 exp_meta: What have I achieved?
 exp_header: 저는 이런 "경험"들을 해봤습니다.
-exp_content: 이런 역량도 가지고 있습니다.
+exp_content: 다양한 경험들을 통해 아래와 같은 역량을 키웠습니다.
 exp_services: # 형식에 맞추어 항목 추가
 - name: 광고기획
   color: color-1
