_config.yml 파일만 수정

--- a/_config.yml
+++ b/_config.yml
@@ -42,17 +42,19 @@ slider_1: # 형식에 맞추어 항목 추가
 
 
 # About
-about_meta: About Me
+about_meta: Certificate
 about_header: >- 
-  "데이터 분석가"
+  자격증
 about_introduce: >-
-  "안녕하세요. 데이터 분석 마케팅 & 그로스 데이터 분석의 전문가가 되고자 하는 황규상입니다."
+  "기본적인 자격 요건을 갖춘 데이터 분석가입니다."
 about_content: >-
-  아래와 같은 자격을 갖추고 있습니다.
+  보유 자격증
 about_services: # 형식에 맞추어 항목 추가
+- icon: icon-code
+  name: 빅데이터분석기사
 - icon: icon-data
   name: SQL개발자(SQLD)
-- icon: icon-code
+- icon: icon-pen
   name: 데이터분석준전문가(ADSP)
 - icon: icon-monitor
   name: 구글애널리틱스 자격(GAIQ)
@@ -67,27 +69,28 @@ tech_list: # 형식에 맞추어 항목 추가
 - name: SQL
   color: color-1
   animation: fadeInLeft
-  percent: 80
-  mark: 80
-  content: SQL의 문법들을 공부하며 문제를 풀고 리뷰했습니다. Redash 사이트를 활용하여 가상 회사 데이터 분석 보고서 및 대시보드를 작성한 경험이 있습니다.
+  percent: 70
+  mark: 70
+  content: SQL을 활용하여, 데이터 추출, 가공, 적재가 가능합니다. On-Premise DB의 소스데이터를 활용하여 Cloud DB에 데이터마트를 구축하는 파이프라인을 개발 및 운영한 경험이 있습니다.
 - name: Python
   color: color-2
   animation: fadeInRight
   percent: 80
   mark: 80
-  content: Python을 활용한 데이터 수집/전처리/분석/시각화가 가능합니다. 다양한 데이터 분석 프로젝트를 Python을 활용하여 진행한 경험이 있습니다.(머신러닝 & 통계분석)
-- name: GA
+  content: Python을 활용하여, 내/외부 데이터 수집, 가공, 시각화, 모델링이 가능합니다. 개발한 모델을 활용하여 데이터 수집, 전처리, 예측, 결과적재 파이프라인을 개발 및 운영한 경험이 있습니다.
+- name: Tableau
   color: color-3
   animation: fadeInLeft
-  percent: 50
-  mark: 50
-  content: 강의를 통해 Google Analytics 다양한 지표를 학습 및 활용 방법을 익혔습니다. 데모 계정을 통해 개인 프로젝트를 진행한 경험이 있습니다.
-- name: Tableau
-  color: color-4
-  animation: fadeInRight
   percent: 60
   mark: 60
-  content: edwith의 boostcamp 강의를 통해 태블로의 기초,중급,고급 기능에 대해 학습했습니다.
+  content: Tableau를 활용하여, 데이터 시각화가 가능합니다. 개발한 모델의 성능 모니터링 및 현업과의 커뮤니케이션을 위해 태블로 대시보드를 개발 및 운영한 경험이 있습니다.
+- name: GA
+  color: color-4
+  animation: fadeInRight
+  percent: 50
+  mark: 50
+  content: 웹 분석 Tool에 대한 기본적인 이해가 있습니다. 예측 모델을 개발할 때, Google analytics의 UV, PV 등의 데이터를 활용한 경험이 있습니다.
+
 #- name: Github
 #  color: color-5
 #  animation: fadeInLeft
@@ -141,18 +144,18 @@ exp_meta: What have I achieved?
 exp_header: 저는 이런 "경험"들을 해봤습니다.
 exp_content: 다양한 경험들을 통해 아래와 같은 역량을 키웠습니다.
 exp_services: # 형식에 맞추어 항목 추가
-- name: 광고기획
+- name: 데이터 분석
   color: color-1
   icon: icon-bulb
-  content: kobaco의 1인 광고 창작자 양성과정을 통해 광고기획 및 제작을 경험하며 마케터로서의 역량을 키웠습니다. 
-- name: 개발
+  content: 내부 고객 데이터부터 다양한 외부 데이터를 수집 및 활용하여 모델을 개발 및 운영한 경험을 통해 데이터 분석에 대한 역량을 키웠습니다.
+- name: 데이터 엔지니어링
   color: color-2
   icon: icon-phone3
-  content: Django를 활용한 웹사이트 개발 프로젝트 및 융복합 개발 프로젝트에 참여하여 개발 역량을 키웠습니다.
-- name : 협업(Git)
+  content: 분석에 필요한 데이터 마트를 구축하기 위해, 데이터 추출, 가공, 적재하는 파이프라인을 개발 및 운영하며 엔지니어링 역량을 키웠습니다.
+- name: 커뮤니케이션
   color: color-3
   icon: icon-home
-  content: 프로젝트 진행 시 github를 통해 소스 코드를 관리하였으며, 협업 역시 github을 통해 진행하였습니다.
+  content: 데이터 분석의 결과를 다양한 현업 담당자들에게 보고 및 공유하는 경험을 통해, 데이터 분석가로서의 커뮤니케이션 역량을 키웠습니다.
 
 exp_counters:
 - name: Activities
@@ -164,6 +167,12 @@ exp_counters:
 carerr_meta: extracurricular activies
 career_header: Work Career
 career_list:
+- name: 한살림 - 데이터 분석가
+  date: 2022.05~2023.09
+  content: 온라인 수요예측 모델을 개발 및 운영하는 데이터 분석가 <br> - 분석 데이터마트 구축 및 운영 <br> - 수요 예측 모델 개발 및 운영 <br> - On-Premise <-> Cloud 연동되는 수요 예측 파이프라인 개발 및 운영  <br> - 모델 성능평가 및 예측 현황 대시보드 구축 및 운영 <br> - SQL(Oracle), Python, Tableau
+  color: color-1
+  icon: icon-pen2
+  animation: fadeInLeft
 - name: kdigital 융복합 프로젝트형 빅데이터 분석 서비스 개발
   date: 2021.06~2021.12
   content: 빅데이터 분석, 개발에 필요한 교육 받으며 개인/팀 프로젝트 진행  <br> - 구글Analytics 데모 계정 분석(개인 프로젝트) <br> - 팀 구성 후 데이터 안심구역 경진대회 참여  <br> - 웹페이지 개발(팀 프로젝트) <br> - 융/복합 프로젝트(빅데이터 분석 담당) <br> - Python, R, SQL, Django, Git
@@ -175,13 +184,7 @@ career_list:
   content: SQL 문법 교육 및 활용 실습까지 진행하며, 각 주 과제 수행 후 피드백 진행 <br> - Redash의 실습 database의 다양한 실습 문제 해결하는 SQL 쿼리 작성 <br> - SQL 활용한 기업의 데이터 분석 보고서 작성 <br> - SQL 활용한 기업의 대시보드 개발
   color: color-2
   icon: icon-pen2
-  animation: fadeInRight
-- name: edwith 부스트코스 - 데이터 시각화를 위한 태블로
-  date: 2022.01~2022.03
-  content: 태블로의 기초,중급,고급 기능을 활용하여 데이터 시각화 과정 실습 <br> - 태블로 기초 = 차트, 테이블, 축, 맵, 그룹/집합 등을 활용한 시각화 <br> - 태블로 중급 = 대시보드, 스토리 기능, 퀵 테이블 활용, 매개변수 생성 <br> - 태블로 고급 = 대시보드 액션 적용, 분야별 효율적인 대시보드 작성
-  color: color-3
-  icon: icon-pen2
-  animation: fadeInLeft 
+  animation: fadeInLeft
 - name: KOBACO 1인 광고 콘텐츠 창작자 양성과정
   date: 2020.05~2020.09
   content: 광고 기획, 촬영, 편집에 대한 기초 학습 및 팀 프로젝트 진행 <br> - 광고홍보학과, 영화과로 구성된 프로젝트 팀 내 유일한 공과대학 학생으로서 광고 기획에 필요한 데이터 수집 및 분석 과정 담당
