--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ slider_1: # 형식에 맞추어 항목 추가
     데이터 분석가 황규상입니다
 
 
-# About
+# Certificate
 about_meta: Certificate
 about_header: >- 
   자격증
@@ -63,8 +63,10 @@ about_services: # 형식에 맞추어 항목 추가
 
 # Tech  skill
 tech_meta: TECH SKILLS
-tech_header: 저는 현재 이것을 할 수 있습니다.
-tech_content: 앞으로 계속 성장하겠습니다.
+tech_header: 활용 기술
+about_introduce: >-
+  "데이터 분석가가 가져야 할 기술을 갖추었습니다."
+tech_content: 활용 기술
 tech_list: # 형식에 맞추어 항목 추가
 - name: SQL
   color: color-1
@@ -176,13 +178,13 @@ career_list:
 - name: kdigital 융복합 프로젝트형 빅데이터 분석 서비스 개발
   date: 2021.06~2021.12
   content: 빅데이터 분석, 개발에 필요한 교육 받으며 개인/팀 프로젝트 진행  <br> - 구글Analytics 데모 계정 분석(개인 프로젝트) <br> - 팀 구성 후 데이터 안심구역 경진대회 참여  <br> - 웹페이지 개발(팀 프로젝트) <br> - 융/복합 프로젝트(빅데이터 분석 담당) <br> - Python, R, SQL, Django, Git
-  color: color-1
+  color: color-2
   icon: icon-pen2
   animation: fadeInLeft
 - name: 코멘토 SQL 직무부트캠프
   date: 2022.01~2022.02
   content: SQL 문법 교육 및 활용 실습까지 진행하며, 각 주 과제 수행 후 피드백 진행 <br> - Redash의 실습 database의 다양한 실습 문제 해결하는 SQL 쿼리 작성 <br> - SQL 활용한 기업의 데이터 분석 보고서 작성 <br> - SQL 활용한 기업의 대시보드 개발
-  color: color-2
+  color: color-3
   icon: icon-pen2
   animation: fadeInLeft
 - name: KOBACO 1인 광고 콘텐츠 창작자 양성과정
