--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kyu's Portfoilo
 name: 황규상
 email: hkyku9@naver.com
 description: >-
-  Data Analist
+  Data Analyst
 
 
 baseurl: ""
@@ -37,7 +37,7 @@ slider_1: # 형식에 맞추어 항목 추가
 - background_url: images/cover_bg_2.jpg
   title: Kyusang <br> Hwang <br> Portfolio site
   subtitle: >- 
-    앞으로 더 성장 하고싶은<br>
+    비즈니스 문제를 해결하는<br>
     데이터 분석가 황규상입니다
 
 
@@ -63,33 +63,33 @@ about_services: # 형식에 맞추어 항목 추가
 
 # Tech  skill
 tech_meta: TECH SKILLS
-tech_header: 기술
-tech_content: 활용 가능 기술
+tech_header: 주요 기술
+tech_content: 데이터 마트 구축부터, 모델 운영 및 대시보드 제공까지의 End-to-End 프로세스 수행이 가능합니다.
 tech_list: # 형식에 맞추어 항목 추가
 - name: SQL
   color: color-1
   animation: fadeInLeft
-  percent: 70
-  mark: 70
-  content: SQL을 활용하여, 데이터 추출, 가공, 적재가 가능합니다. On-Premise DB의 소스데이터를 활용하여 Cloud DB에 데이터마트를 구축하는 파이프라인을 개발 및 운영한 경험이 있습니다.
+  percent: 90
+  mark: 90
+  content: SQL을 활용하여 데이터 추출, 가공, 적재가 가능하며, On-Premise 및 Cloud 환경에서 데이터 마트를 구축한 경험이 있습니다. 테이블 설계, 프로시저 개발, 잡 스케줄링 등을 수행하였습니다.\n\n
 - name: Python
   color: color-2
   animation: fadeInRight
-  percent: 80
-  mark: 80
-  content: Python을 활용하여, 내/외부 데이터 수집, 가공, 시각화, 모델링이 가능합니다. 개발한 모델을 활용하여 데이터 수집, 전처리, 예측, 결과적재 파이프라인을 개발 및 운영한 경험이 있습니다.
+  percent: 90
+  mark: 90
+  content: Python을 활용하여, 데이터 수집, 전처리, 분석 및 머신러닝 모델 개발을 수행하였습니다. 효율적인 데이터 처리, API 활용을 통해 자동화 파이프라인을 구축한 경험이 있습니다.\n\n
 - name: Tableau
   color: color-3
   animation: fadeInLeft
-  percent: 60
+  percent: 70
   mark: 60
-  content: Tableau를 활용하여, 데이터 시각화가 가능합니다. 개발한 모델의 성능 모니터링 및 현업과의 커뮤니케이션을 위해 태블로 대시보드를 개발 및 운영한 경험이 있습니다.
-- name: GA
+  content: Tableau를 활용하여, 데이터 분석 및 시각화를 수행하였으며, 비즈니스 의사결정을 지원하는 대시보드를 구축한 경험이 있습니다.
+- name: Data Pipeline Automation
   color: color-4
   animation: fadeInRight
-  percent: 50
+  percent: 70
   mark: 50
-  content: 웹 분석 Tool에 대한 기본적인 이해가 있습니다. 예측 모델을 개발할 때, Google analytics의 UV, PV 등의 데이터를 활용한 경험이 있습니다.
+  content: 클라우드 환경에서 데이터 마트 구축 및 ETL 파이프라인을 운영한 경험이 있습니다. OCI 기반의 데이터 적재 및 테이블 관리를 수행하였습니다.
 
 #- name: Github
 #  color: color-5
@@ -103,7 +103,7 @@ tech_desc:
 # Project
 project_meta: My Work
 project_header: PROJECT
-project_introduce: <span>팀 프로젝트</span><span>개인 프로젝트</span>
+project_introduce: 
 project_load_more: 앞으로 더 많은 프로젝트가 추가될 예정입니다:)    # 더보기 내용
 project_load_more_url: #
 
@@ -214,15 +214,9 @@ blog_list:
 - title: github 블로그
   subtitle: 데이터 분석 블로그 운영
   date: 2022.01
-  content: 깃허브를 통해 개발도 배우며, 커스터마이징이 가능한 블로그를 운영하고 있습니다.
+  content: 커스터마이징이 가능한 블로그를 운영하고 있습니다.
   thumbnail_url: images/blog_logo.png
   link: https://kyusanghwang0912.github.io/
-- title: 네이버블로그
-  subtitle: 첫 블로그
-  date: 2021.01
-  content: 본격적으로 python을 배우기 시작할 때 시작한 블로그 입니다.
-  thumbnail_url: images/naver_blog_logo.png
-  link: https://blog.naver.com/hkyku9
 
 
 # Contact
