--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ profile_image: images/kyusang_casual.jpg
 
 
 # SNS 아이디
-instagram_id: h_kyu3
+instagram_id: 
 
 
 # Youtube vid
@@ -71,13 +71,13 @@ tech_list: # 형식에 맞추어 항목 추가
   animation: fadeInLeft
   percent: 90
   mark: 90
-  content: Python을 활용하여, 데이터 수집, 전처리, 분석 및 머신러닝 모델 개발을 수행하였습니다. 효율적인 데이터 처리, API 활용을 통해 자동화 파이프라인을 구축한 경험이 있습니다.\n\n
+  content: Python을 활용하여, 데이터 수집, 전처리, 분석 및 머신러닝 모델 개발을 수행하였습니다. 효율적인 데이터 처리, API 활용을 통해 자동화 파이프라인을 구축한 경험이 있습니다.
 - name: SQL
   color: color-2
   animation: fadeInRight
   percent: 90
   mark: 90
-  content: SQL을 활용하여 데이터 추출, 가공, 적재가 가능하며, On-Premise 및 Cloud 환경에서 데이터 마트를 구축한 경험이 있습니다. 테이블 설계, 프로시저 개발, 잡 스케줄링 등을 수행하였습니다.\n\n
+  content: SQL을 활용하여 데이터 추출, 가공, 적재가 가능하며, On-Premise 및 Cloud 환경에서 데이터 마트를 구축한 경험이 있습니다. 테이블 설계, 프로시저 개발, 잡 스케줄링 등을 수행하였습니다.
 - name: Tableau
   color: color-3
   animation: fadeInLeft
@@ -104,10 +104,10 @@ tech_desc:
 project_meta: My Work
 project_header: PROJECT
 project_introduce: 
-project_load_more: 앞으로 더 많은 프로젝트가 추가될 예정입니다:)    # 더보기 내용
+project_load_more: 위 경험들을 바탕으로, 빠르고 정확하게 배워나가겠습니다.   # 더보기 내용
 project_load_more_url: #
 
-project_team_name: 팀프로젝트
+project_team_name: 팀 프로젝트
 project_team: # 형식에 맞추어 항목 추가
 - background_url: images/delivery.png
   animation: fadeInLeft
@@ -121,21 +121,23 @@ project_team: # 형식에 맞추어 항목 추가
   description: Bigdata, AI, IoT, Cloud 분야가 협력하여 개발한 무인점포 AI CCTV 제품을 기획하는 프로젝트를 진행했습니다.
   detail_url: https://kyusanghwang0912.github.io/project/2022-02-27-naga/
 
-project_my_name: 개인프로젝트
+project_my_name: 개인 프로젝트
 project_my: # 형식에 맞추어 항목 추가
-- background_url: images/SQL_comento.png
-  animation: fadeInLeft
-  name: SQL_redash_데이터 분석 프로젝트(2022.01 ~ 2022.02)
-  description: SQL을 활용하여 redash에서 Northwind라는 가상회사의 비즈니스 데이터 분석 프로젝트를 진행했습니다. 
-  detail_url: https://kyusanghwang0912.github.io/project/2022-03-01-sql_comento/
-  readmore_url: #
-
 - background_url: images/git_adp.png
-  animation: fadeInRight
-  name: Pyhton 코딩 북 프로젝트(2021.09 ~ 2022.02)
-  description: ADP 자격증 준비를 위해 그룹 스터디를 진행하며 Python을 활용한 전처리/통계분석/머신러닝을 학습 및 실습하고 정리하여, 책으로 제작했습니다.
+  animation: fadeInLeft
+  name: 코딩 북 프로젝트(2021.09 ~ 2022.02)
+  description: 그룹 스터디를 진행하며 Python을 활용한 전처리,통계분석,머신러닝을 학습 및 실습하고 정리하여, 책으로 제작했습니다.
   detail_url: https://github.com/kyusangHwang0912/TIL/tree/master/ADP
   readmore_url: #
+
+# - background_url: images/SQL_comento.png
+#   animation: fadeInLeft
+#   name: SQL_redash_데이터 분석 프로젝트(2022.01 ~ 2022.02)
+#   description: SQL을 활용하여 redash에서 Northwind라는 가상회사의 비즈니스 데이터 분석 프로젝트를 진행했습니다. 
+#   detail_url: https://kyusanghwang0912.github.io/project/2022-03-01-sql_comento/
+#   readmore_url: #
+
+
 
 
 
@@ -158,7 +160,7 @@ exp_services: # 형식에 맞추어 항목 추가
   content: 데이터 분석의 결과를 다양한 현업 담당자들에게 보고 및 공유하는 경험을 통해, 데이터 분석가로서의 커뮤니케이션 역량을 키웠습니다.
 
 exp_counters:
-- name: Activities
+- name: Career & Activities
   count: 4
   speed: 500
 
@@ -169,7 +171,7 @@ career_header: Work Career
 career_list:
 - name: 한살림 - 데이터 분석가
   date: 2022.05~2023.09
-  content: 온라인 수요예측 모델을 개발 및 운영하는 데이터 분석가 <br> - 분석 데이터마트 구축 및 운영 <br> - 수요 예측 모델 개발 및 운영 <br> - On-Premise <-> Cloud 연동되는 수요 예측 파이프라인 개발 및 운영  <br> - 모델 성능평가 및 예측 현황 대시보드 구축 및 운영 <br> - SQL(Oracle), Python, Tableau
+  content: 수요예측 모델을 개발 및 운영하는 데이터 분석가 <br> - 분석 데이터마트 구축 및 운영 <br> - 수요 예측 모델 개발 및 운영 <br> - On-Premise - Cloud 연동되는 수요 예측 파이프라인 개발 및 운영  <br> - 모델 성능평가 및 예측 현황 대시보드 구축 및 운영 <br> - SQL(Oracle), Python, Tableau
   color: color-1
   icon: icon-pen2
   animation: fadeInLeft
@@ -181,7 +183,7 @@ career_list:
   animation: fadeInLeft
 - name: 코멘토 SQL 직무부트캠프
   date: 2022.01~2022.02
-  content: SQL 문법 교육 및 활용 실습까지 진행하며, 각 주 과제 수행 후 피드백 진행 <br> - Redash의 실습 database의 다양한 실습 문제 해결하는 SQL 쿼리 작성 <br> - SQL 활용한 기업의 데이터 분석 보고서 작성 <br> - SQL 활용한 기업의 대시보드 개발
+  content: SQL 문법 교육 및 활용 실습까지 진행하며, 각 주 과제 수행 후 피드백 진행 <br> - Redash의 실습 database의 다양한 실습 문제 해결하는 SQL 쿼리 작성 <br> - SQL 활용, 데이터 분석 보고서 작성 실습
   color: color-3
   icon: icon-pen2
   animation: fadeInLeft
