instagram -> linkedin 으로 변경 테스트

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,10 @@ profile_image: images/kyusang_casual.jpg
 
 
 # SNS 아이디
-instagram_id: 
+# instagram_id: hkyu3
+
+#
+linkedin_id : hks912
 
 
 # Youtube vid
