--- a/_config.yml
+++ b/_config.yml
@@ -116,17 +116,17 @@ project_load_more_url: #
 
 project_team_name: 비즈니스 팀 프로젝트
 project_team: # 형식에 맞추어 항목 추가
-- background_url: images/delivery.png
+- background_url: images/Demand_forecasting_online.png
   animation: fadeInLeft
-  name: 데이터 안심구역 공모전(2021.09 ~ 2021.11)
-  description: 데이터 분석을 통해, 배달관련사고 방지를 위한 서울특별시의 특별 단속구역을 선정하는 프로젝트를 진행했습니다.
-  detail_url: https://kyusanghwang0912.github.io/project/2022-02-28-seoul_delivery/
+  name: 온라인 수요예측 모델 개발 프로젝트(2022.06 ~ 2023.11)
+  description: 리드타임 단축을 위한 온라인 수요예측 모델 개발 프로젝트를 진행했습니다.
+  detail_url: https://broad-morocco-0e4.notion.site/1a1a820339248020a18eeca4c9867281?pvs=4
 
-- background_url: images/naga.png
+- background_url: images/Demand_forecasting_offline.png
   animation: fadeInRight
-  name: K-digital 융복합 프로젝트(2021.10 ~ 2021.12)
-  description: Bigdata, AI, IoT, Cloud 분야가 협력하여 개발한 무인점포 AI CCTV 제품을 기획하는 프로젝트를 진행했습니다.
-  detail_url: https://kyusanghwang0912.github.io/project/2022-02-27-naga/
+  name: 매장 수요예측 모델 개발 프로젝트(2023.11 ~ 2024.12)
+  description: 매장 발주시스템 개선을 위한 수요예측 모델 개발 프로젝트를 진행했습니다.
+  detail_url: https://broad-morocco-0e4.notion.site/1a1a8203392480ca9c42e05c30b2ac9e?pvs=4
 
 
 
@@ -142,7 +142,7 @@ project_my: # 형식에 맞추어 항목 추가
 - background_url: images/delivery.png
   animation: fadeInRight
   name: 데이터 안심구역 공모전(2021.09 ~ 2021.11)
-  description: 데이터 분석을 통해, 배달관련사고 방지를 위한 서울특별시의 특별 단속구역을 선정하는 프로젝트를 진행했습니다.
+  description: 배달관련사고 방지를 위한 서울특별시의 특별 단속구역을 선정하는 프로젝트를 진행했습니다.
   detail_url: https://kyusanghwang0912.github.io/project/2022-02-28-seoul_delivery/
 
 - background_url: images/naga.png
@@ -166,7 +166,7 @@ career_header: Work Career
 career_list:
 - name: 한살림 - 데이터 분석가
   date: 2022.05~2023.09
-  content: 수요예측 모델을 개발 및 운영하는 데이터 분석가 <br> - 분석 데이터마트 구축 및 운영 <br> - 수요 예측 모델 개발 및 운영 <br> - On-Premise - Cloud 연동되는 수요 예측 파이프라인 개발 및 운영  <br> - 모델 성능평가 및 예측 현황 대시보드 구축 및 운영 <br> - SQL(Oracle), Python, Tableau
+  content: 매장 수요 예측 모델 개발 및 운영 (2023.11 -) <br> |End-to-End 프로세스 구축| <br> - 데이터 마트 구축 및 운영 (SQL, Python) <br> - 매장 발주/주문/재고관리 시스템에 적합한 문제 정의 및 데이터 처리 <br> - 주요 변수 탐색 및 모델 최적화  <br> - 매장 수요예측 모델 개발 (자체 모델 / Rule기반 / AutoML) <br> - 모델 학습 및 운영 파이프라인 구축 및 자동화 <br> - API 기반 모니터링 프로세스 구축 (Python - Google Sheet) <br> - 성능평가 대시보드 구축 (Tableau)  <br> <br> 온라인 수요 예측 모델 개발 및 운영 <br> |데이터 마트 구축 & 모델 개발 및 운영 최적화| <br> - 데이터 마트 구축 및 운영 (SQL, Python) <br> - 온프레미스 - 클라우드 DB 연동 최적화, 온라인 발주 시스템과 연계 <br> - API 기반 데이터 수집 <br> - 온라인 발주시스템에 적합한 문제 정의 및 데이터 처리 <br> - 온라인 수요예측 모델 개발 (AutoML 활용) <br> - 모델 학습 및 운영 파이프라인 고도화 <br> - 주요 변수 탐색 및 모델 성능 개선 (가설 검증) <br> - 성능 평가 대시보드 구축 (Tableau) <br> <br> 기타 데이터 분석 & 엔지니어링 업무 지원 <br> - 클라우드 분석 플랫폼 운영 및 자원 최적화(Oracle Cloud Infrastructure) <br> - API 기반 외부 데이터 수집 및 데이터 마트 구축 <br> - 1,738 물품 사양서 데이터 전산화 → Excel 데이터 파싱 및 전처리 후 적재 <br> - CRM 활동 지원을 위한 데이터 마트 구축(고객, 쿠폰) <br> - 차세대 ERP 시스템 전환 대응 → 테이블 구조 변경 분석 및 데이터 검증
   color: color-1
   icon: icon-pen2
   animation: fadeInLeft
@@ -184,7 +184,7 @@ career_list:
   animation: fadeInLeft
 - name: KOBACO 1인 광고 콘텐츠 창작자 양성과정
   date: 2020.05~2020.09
-  content: 광고 기획, 촬영, 편집에 대한 기초 학습 및 팀 프로젝트 진행 <br> - 광고홍보학과, 영화과로 구성된 프로젝트 팀 내 유일한 공과대학 학생으로서 광고 기획에 필요한 데이터 수집 및 분석 과정 담당
+  content: 광고 기획, 촬영, 편집에 대한 기초 학습 및 팀 프로젝트 진행 <br> - 광고홍보학과, 영화과로 구성된 프로젝트 팀 내 광고 기획에 필요한 데이터 수집 및 분석 과정 담당
   color: color-4
   icon: icon-pen2
   animation: fadeInRight
@@ -195,7 +195,7 @@ about_meta: Certificate
 about_header: >- 
   자격증
 about_introduce: >-
-  "기본적인 자격 요건을 갖춘 데이터 분석가입니다."
+  "데이터 분석에 대한 지식을 보유하고 있습니다."
 about_content: >-
   보유 자격증
 about_services: # 형식에 맞추어 항목 추가
