텍스트 수정

--- a/_config.yml
+++ b/_config.yml
@@ -165,8 +165,8 @@ carerr_meta: extracurricular activies
 career_header: Work Career
 career_list:
 - name: 한살림 - 데이터 분석가
-  date: 2022.05~2023.09
-  content: 매장 수요 예측 모델 개발 및 운영 (2023.11 -) <br> |End-to-End 프로세스 구축| <br> - 데이터 마트 구축 및 운영 (SQL, Python) <br> - 매장 발주/주문/재고관리 시스템에 적합한 문제 정의 및 데이터 처리 <br> - 주요 변수 탐색 및 모델 최적화  <br> - 매장 수요예측 모델 개발 (자체 모델 / Rule기반 / AutoML) <br> - 모델 학습 및 운영 파이프라인 구축 및 자동화 <br> - API 기반 모니터링 프로세스 구축 (Python - Google Sheet) <br> - 성능평가 대시보드 구축 (Tableau)  <br> <br> 온라인 수요 예측 모델 개발 및 운영 <br> |데이터 마트 구축 & 모델 개발 및 운영 최적화| <br> - 데이터 마트 구축 및 운영 (SQL, Python) <br> - 온프레미스 - 클라우드 DB 연동 최적화, 온라인 발주 시스템과 연계 <br> - API 기반 데이터 수집 <br> - 온라인 발주시스템에 적합한 문제 정의 및 데이터 처리 <br> - 온라인 수요예측 모델 개발 (AutoML 활용) <br> - 모델 학습 및 운영 파이프라인 고도화 <br> - 주요 변수 탐색 및 모델 성능 개선 (가설 검증) <br> - 성능 평가 대시보드 구축 (Tableau) <br> <br> 기타 데이터 분석 & 엔지니어링 업무 지원 <br> - 클라우드 분석 플랫폼 운영 및 자원 최적화(Oracle Cloud Infrastructure) <br> - API 기반 외부 데이터 수집 및 데이터 마트 구축 <br> - 1,738 물품 사양서 데이터 전산화 → Excel 데이터 파싱 및 전처리 후 적재 <br> - CRM 활동 지원을 위한 데이터 마트 구축(고객, 쿠폰) <br> - 차세대 ERP 시스템 전환 대응 → 테이블 구조 변경 분석 및 데이터 검증
+  date: 2022.05 ~
+  content: 매장 수요 예측 모델 개발 및 운영 (2023.11 -) <br> | End-to-End 프로세스 구축 | <br> - 데이터 마트 구축 및 운영 (SQL, Python) <br> - 매장 발주/주문/재고관리 시스템에 적합한 문제 정의 및 데이터 처리 <br> - 주요 변수 탐색 및 모델 최적화  <br> - 매장 수요예측 모델 개발 (자체 모델 / Rule기반 / AutoML) <br> - 모델 학습 및 운영 파이프라인 구축 및 자동화 <br> - API 기반 모니터링 프로세스 구축 (Python - Google Sheet) <br> - 성능평가 대시보드 구축 (Tableau)  <br> <br> 온라인 수요 예측 모델 개발 및 운영 (2022.06 - ) <br> | 데이터 마트 구축 & 모델 개발 및 운영 최적화 | <br> - 데이터 마트 구축 및 운영 (SQL, Python) <br> - 온프레미스 - 클라우드 DB 연동 최적화, 온라인 발주 시스템과 연계 <br> - API 기반 데이터 수집 <br> - 온라인 발주시스템에 적합한 문제 정의 및 데이터 처리 <br> - 온라인 수요예측 모델 개발 (AutoML 활용) <br> - 모델 학습 및 운영 파이프라인 고도화 <br> - 주요 변수 탐색 및 모델 성능 개선 (가설 검증) <br> - 성능 평가 대시보드 구축 (Tableau) <br> <br> 기타 데이터 분석 & 엔지니어링 업무 지원 (2022.06 -) <br> - 클라우드 분석 플랫폼 운영 및 자원 최적화(Oracle Cloud Infrastructure) <br> - API 기반 외부 데이터 수집 및 데이터 마트 구축 <br> - 1,738 물품 사양서 데이터 전산화 → Excel 데이터 파싱 및 전처리 후 적재 <br> - CRM 활동 지원을 위한 데이터 마트 구축(고객, 쿠폰) <br> - 차세대 ERP 시스템 전환 대응 → 테이블 구조 변경 분석 및 데이터 검증
   color: color-1
   icon: icon-pen2
   animation: fadeInLeft
