--- a/_config.yml
+++ b/_config.yml
@@ -246,7 +246,7 @@ contact_list:
   icon: icon-map
 - title: +82 10 5533 9783
   icon: icon-phone
-- title: LunkedIn
+- title: LinkedIn
   icon: icon-layers2
   url: https://www.linkedin.com/in/hks912/
 
